--- a/index.html
+++ b/index.html
@@ -1,11 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Hello Front-End</title>
+  <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/style.css">
+  <title>KitE's & KitN's</title>
 </head>
+
 <body>
-  <h1>Hello Front-End</h1>
+  <div id="container">
+    <h1>KitE's & KitN's</h1>
+
+    <h3>type the emotion you feel when you see cute cat pictures </br> and submit when you're ready to feel the feels!
+    </h3>
+
+    <form>
+      <input type="text" id="searchBar">
+      <button id="submitButton">Submit</button>
+    </form>
+  </div>
+
+  <script src="js/script.js"></script>
 </body>
+
 </html>
