--- a/index.html
+++ b/index.html
@@ -3,9 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Hello Front-End</title>
+  <title>Reddit Photo Slideshow</title>
 </head>
 <body>
-  <h1>Hello Front-End</h1>
+  <h1>Reddit Photo Slideshow</h1>
+  <p>Click the button to fetch pictures of your choosing from the Reddit API.</p>
+  <form id="fetchDataForm">
+    <input type="text" id="textInput">
+    <button id="submitButton">Go</button>
+  </form>
+  <div id="gallery">
+    <img src="" alt="" id="imageTag">
+  </div>
+  <script src="js/app.js"></script>
 </body>
 </html>
