Got slideshow working with search function

--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Hello Front-End</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <h1>Hello Front-End</h1>
+  <h1 id = "intro">Let's get some images from reddit, shall we?</h1>
+  <input type="search" id="imgSearch" placeholder="search">
+  <button type="submit" id="searchButton">go</button>
+  <div id="images"><img id="testImage" src="examples/ajaxexample1.jpg"></div>
+  <button type="submit" id="stopButton">stop</button>
+  <script src="js/app.js"></script>
 </body>
 </html>
