Reddit fetch deliverable hw#7 (incomplete) -- Nikki
Sleep hit hard yesterday so this is only just started, but will continue to work until complete!

--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Hello Front-End</title>
+  <title>Reptiles with Hats: A Slideshow</title>
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-  <h1>Hello Front-End</h1>
+  <h1>Reptiles with Hats: A Slideshow</h1>
+
+  <p>Click the button for a series of delightful pictures of reptiles, with hats!</p>
+
+  <script src="js/script.js"></script>
 </body>
 </html>
