--- a/index.html
+++ b/index.html
@@ -3,9 +3,60 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link href="style.css">
   <title>Hello Front-End</title>
 </head>
 <body>
-  <h1>Hello Front-End</h1>
+  <h1 id="title">Reddit SlideShow Creator</h1>
+  <p1 id="directions">Enter a search term to see related content</p1>
+  <button type="button" class="btn btn-danger" id="stop">Stop</button>
+  <div class="input-group mb-3">
+    <button class="btn btn-outline-secondary" type="button" id="button-addon1">Search</button>
+    <input type="text" id = "inputField" class="form-control" placeholder="This should be the innerText" aria-label="Example text with button addon" aria-describedby="button-addon1">
+  </div>
+  <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active" id="img">
+        <!-- <img src="/Users/jonathanzwissler/SEI/deliverables/fetch-reddit-slideshow/examples/ajaxexample1.jpg" class="d-block w-100" alt="..."> -->
+      </div>
+      <!-- <div class="carousel-item" id="img0">
+        <img id="firstImage" src="/Users/jonathanzwissler/SEI/deliverables/fetch-reddit-slideshow/examples/ajaxexample1.jpg" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item" id="img1">
+        <img src="/Users/jonathanzwissler/SEI/deliverables/fetch-reddit-slideshow/examples/ajaxexample1.jpg" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item" id="img1">
+        <img src="/Users/jonathanzwissler/SEI/deliverables/fetch-reddit-slideshow/examples/ajaxexample1.jpg" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item" id="img1">
+        <img src="/Users/jonathanzwissler/SEI/deliverables/fetch-reddit-slideshow/examples/ajaxexample1.jpg" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item" id="img1">
+        <img src="/Users/jonathanzwissler/SEI/deliverables/fetch-reddit-slideshow/examples/ajaxexample1.jpg" class="d-block w-100" alt="...">
+      </div> -->
+      
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+
+  <h2>
+
+  </h2>
+
+
+
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="script.js"></script>
 </body>
 </html>
