Fetch Reddit Finished

--- a/index.html
+++ b/index.html
@@ -18,23 +18,9 @@
   <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active" id="img">
-        <!-- <img src="/Users/jonathanzwissler/SEI/deliverables/fetch-reddit-slideshow/examples/ajaxexample1.jpg" class="d-block w-100" alt="..."> -->
+        <img src="https://img.wallpapersafari.com/desktop/1600/900/4/37/Ju5039.jpg" class="d-block w-100" alt="..."> 
       </div>
-      <!-- <div class="carousel-item" id="img0">
-        <img id="firstImage" src="/Users/jonathanzwissler/SEI/deliverables/fetch-reddit-slideshow/examples/ajaxexample1.jpg" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item" id="img1">
-        <img src="/Users/jonathanzwissler/SEI/deliverables/fetch-reddit-slideshow/examples/ajaxexample1.jpg" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item" id="img1">
-        <img src="/Users/jonathanzwissler/SEI/deliverables/fetch-reddit-slideshow/examples/ajaxexample1.jpg" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item" id="img1">
-        <img src="/Users/jonathanzwissler/SEI/deliverables/fetch-reddit-slideshow/examples/ajaxexample1.jpg" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item" id="img1">
-        <img src="/Users/jonathanzwissler/SEI/deliverables/fetch-reddit-slideshow/examples/ajaxexample1.jpg" class="d-block w-100" alt="...">
-      </div> -->
+      
       
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
