Updated CSS and fixed an error that returned unusable thumbnail values

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <h1 id = "intro">Let's get some images from reddit, shall we?</h1>
-  <input type="search" id="imgSearch" placeholder="search">
+  <input type="search" id="imgSearch" placeholder="What would you like to see?">
   <button type="submit" id="searchButton">go</button>
   <div id="images"><img id="testImage" src="examples/ajaxexample1.jpg"></div>
   <button type="submit" id="stopButton">stop</button>
