--- a/index.html
+++ b/index.html
@@ -3,9 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Hello Front-End</title>
+  <link rel="stylesheet" href="css/style.css" />
+  <title>Reddit SlideShow!</title>
 </head>
 <body>
-  <h1>Hello Front-End</h1>
+  
+
+  <form id="submitForm">
+    <h1>Reddit SlideShow!</h1>
+    <input type="string" id="searchInput">
+    <button id="submitButton">Search</button>   
+  </form>
+
+  <button id="stopButton" style="display: none;">Stop</button>
+
+  <script src="js/app.js"></script>
 </body>
 </html>
