--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="css/style.css">
   <title>Reddit Photo Slideshow</title>
 </head>
 <body>
-  <h1>Reddit Photo Slideshow</h1>
-  <p>Click the button to fetch pictures of your choosing from the Reddit API.</p>
+  <h1 id="title">Reddit Photo Slideshow</h1>
+  <p id="description">Click the button to fetch pictures of your choosing from the Reddit API.</p>
   <form id="fetchDataForm">
     <input type="text" id="textInput">
     <button id="submitButton">Go</button>
   </form>
   <div id="gallery">
-    <img src="" alt="" id="imageTag">
   </div>
   <script src="js/app.js"></script>
 </body>
