--- a/index.html
+++ b/index.html
@@ -4,8 +4,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Hello Front-End</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <h1>Hello Front-End</h1>
+  <div class="container">
+    <h1>Slideshow</h1>
+    <div class="slideshow-container">
+    </div>
+    <form class="noHide">
+      <input type="string" id="input">
+      <button id="submitButton">Submit</button>
+  </form>
+  <div id="message" class="noHide">Type & Submit to Generate a Slideshow</div>
+  <button id="stopShow" class="hide">Stop Slideshow</button>
+  </div>
+  <script src="js/app.js"></script>
 </body>
 </html>
+
