--- a/index.html
+++ b/index.html
@@ -4,8 +4,26 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Hello Front-End</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <h1>Hello Front-End</h1>
+
+  <div class="container">
+      <h1 id = 'headerone'>Welcome to the Slideshow</h1>
+      <h2 id = 'headertwo'>To begin, just enter a word and submit!</h2>
+  
+
+    <form >
+      <input type="text" id="searchButton" placeholder = ''>
+      <input type="submit" id="'picText"></button>
+      <button type="button"  id="stopButton">New Search</button>
+      <div id= "imageList"> </div>
+
+    </form>
+
+  </div>
+
+
+<script src="js/app.js"></script>
 </body>
 </html>
