--- a/index.html
+++ b/index.html
@@ -3,9 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Hello Front-End</title>
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <title>Photo Slide Show</title>
 </head>
 <body>
-  <h1>Hello Front-End</h1>
+  <h1>Reddit Photo Slide Show</h1>
+  <div>
+    <img src="" alt="" id="imgSpace">
+  </div>
+  <div id="stopDiv"></div>
+  <form id="formSubmit">
+    <label for="submit" id="inputLabel">search your image...</label>
+    <input type="text" id="textInput">
+    <button id="submitButton">Meow!</button>
+  </form>
+  <script src="js/script.js"></script>
 </body>
 </html>
