--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css" />
   <title>Reddit SlideShow!</title>
 </head>
@@ -15,8 +16,41 @@
     <button id="submitButton">Search</button>   
   </form>
 
+
+  <div id="imgBox" style="display: none;">
+
+    <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+   
+        </div>
+      </div>
+    </div>
+
+  </div>
+
   <button id="stopButton" style="display: none;">Stop</button>
 
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   <script src="js/app.js"></script>
 </body>
 </html>
+
+
+<!-- <div class="carousel-item active" >
+  <img src='...' class="d-block w-100" data-bs-interval="3000" id="item1">
+</div>
+<div class="carousel-item" id="item2">
+  <img src="..." class="d-block w-100" data-bs-interval="3000" id="item2">
+</div>
+<div class="carousel-item" id="item">
+  <img src="..." class="d-block w-100" data-bs-interval="3000" id="item3">
+</div>
+<div class="carousel-item">
+  <img src="..." class="d-block w-100" data-bs-interval="3000 "id="item4">
+</div>
+<div class="carousel-item">
+  <img src="..." class="d-block w-100" data-bs-interval="3000" id="item5">
+</div>
+<div class="carousel-item">
+  <img src="..." class="d-block w-100" data-bs-interval="3000" id="item6"> -->
