--- a/index.html
+++ b/index.html
@@ -3,9 +3,49 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Hello Front-End</title>
+  <link rel="stylesheet" 
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/style.css">
+  <title>Reddit Photo Sliceshow</title>
 </head>
+
 <body>
-  <h1>Hello Front-End</h1>
+  <div class = "top-container">
+    <div class = "container">
+
+        <div class="row">
+          <div class="col col-md-10 offset-md-1 col-lg-8 offset-lg-2">
+            <div id="search-display">
+                <h1>Reddit Photo Slideshow</h1>
+                <p id="description">This will display a slideshow of images from Reddit based off of your search string. Enter a search string in the box below and press Start.</p>
+  
+                <form id="form" action="">
+                  <label for="Search"></label><br>
+                  <input type="text" id="search-string" name="search-string" value=""><br>
+                  <input type="submit" value="Start">
+                </form> 
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div id="carousel-container" class="col col-md-10 offset-md-1 col-lg-8 offset-lg-2">
+            <button type="button" id="stop-button" class="btn btn-danger btn-lg" display="hidden">Stop slide (pause)</button><br><br>
+
+            <div id="carousel" class="carousel slide" data-ride="carousel" data-interval="2000">
+              <div class="carousel-inner">
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </div>
+
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  <script src="js/app.js"></script>
 </body>
 </html>
