--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
   <title>Hello Front-End</title>
 </head>
 <body>
-  <h1>Hello Front-End</h1>
+  <h1>Cat Gallery</h1>
+  <p> press start to view the reddit gallery of cats</p>
+  <form>
+      <input type="text" id="textInput">
+      <button id="searchButton">Search</button>
+  </form>
+    <script src="js/script.js"></script>
 </body>
 </html>
