--- a/index.html
+++ b/index.html
@@ -3,9 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Hello Front-End</title>
+  <title>Hello Front End!</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Hello Front-End</h1>
+<div id = "container">
+  <h1>Hello Front End</h1>
+  <h2>Hit Go to Start!</h2>
+  <input type="search" id="searchInput">
+  <button id="searchButton">Go</button>
+</div>
+<script src="js/app.js"></script>
 </body>
 </html>
