--- a/index.html
+++ b/index.html
@@ -4,8 +4,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Hello Front-End</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <h1>Hello Front-End</h1>
+  <div> 
+    <h1>Some Sort of Title!</h1>
+    <p id="description">Search anything you want and it will come up!</p>
+  </div>
+  <div id="photo"></div>
+  <form action="" method="get">
+    <input type="text" name="Enter Text Here" id="searchField">
+    <button type="submit" id="searchButton">Search</button>
+  </form>
+  <script src="js/app.js"></script>
 </body>
 </html>
