--- a/index.html
+++ b/index.html
@@ -3,9 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Hello Front-End</title>
+  <title>Furry Friends</title>
+  <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> -->
+  <link  rel= "stylesheet" href="css/style.css">
 </head>
 <body>
-  <h1>Hello Front-End</h1>
+  <div id ="title">Furry Furry Friends</div>
+  <div id="description"> For your daily dose of a dopamine, click the button below to see a slideshow of Cats Reddit has to offer! </div>
+  <div id="holds-image">
+    <img id="imageSource" src="#"> </img>
+  </div>
+  <form> <input type="text">
+    <button id="submit-button">Search!</button>
+  </form>
+  <script src="js/app.js"></script> 
 </body>
 </html>
