--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
   <div id="holds-image">
     <img id="imageSource" src="#"> </img>
   </div>
-  <form> <input type="text">
+  <form>
+    
+    <input type="text" id="userInput">
     <button id="submit-button">Search!</button>
+
   </form>
   <script src="js/app.js"></script> 
 </body>
