--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
   <div id="imgBox" style="display: none;">
 
     <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
-      <div class="carousel-inner">
+      <div class="carousel-inner" id="carousel-inner">
+        <div class="carousel-item active" >
+        <img src='examples/loading-bar.gif' class="d-block w-100" data-bs-interval="1000" id="item1">
+        </div>
    
         </div>
       </div>
@@ -28,7 +31,7 @@
 
   </div>
 
-  <button id="stopButton" style="display: none;">Stop</button>
+  <button id="stopButton" style="display: none;" onClick="window.location.reload();">Stop</button>
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
