--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Hello Front-End</title>
+  <title>Dog Collage</title>
+  <link rel = 'stylesheet', href = 'css/style.css'>
 </head>
 <body>
-  <h1>Hello Front-End</h1>
+  <h1>Dog Collage</h1>
+  <script src = "js/main.js"></script>
 </body>
 </html>
