--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Shizuru&display=swap" rel="stylesheet">
   <title>Photo Slide Show</title>
 </head>
 <body>
-  <h1>Reddit Photo Slide Show</h1>
+  <h1>CATS.</h1>
   <div>
     <img src="" alt="" id="imgSpace">
   </div>
