functionality added to the slide show, with appropriate appends to return to the start screen

--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
 
 <body>
   <div id="container">
-    <h1>KitE's & KitN's</h1>
+    <h1 id="title">KitE's & KitN's</h1>
 
-    <h3>type the emotion you feel when you see cute cat pictures </br> and submit when you're ready to feel the feels!
+    <h3 id="feels">type the emotion you feel when you see cute cat pictures </br> and submit when you're ready to feel
+      the feels!
     </h3>
 
     <form>
