Add function to hide the form

--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
 </head>
 <body>
   <h1>Dog Collage</h1>
+  <div id = 'divInstructions'>
+     click the button "search"
+    <br>
+    see a slideshow of dogs appear!
+  </div>
+  <br>
+  <form id = 'formSearch'>
+    <input type = "text", id = 'inputSearch'>
+    <button type ="submit", id = 'buttonSearch'>search</button>
+  </form>
   <script src = "js/main.js"></script>
 </body>
 </html>
