Add function to create url with search term & a fetch to return json data

--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 <body>
   <h1>Dog Collage</h1>
   <div id = 'divInstructions'>
+    Type in anything you want to search for
+    <br>
      click the button "search"
     <br>
-    see a slideshow of dogs appear!
+    see a slideshow of whatever you searched appear!
   </div>
   <br>
   <form id = 'formSearch'>
