--- a/index.html
+++ b/index.html
@@ -3,9 +3,22 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" type="text/css" href="css/style.css" />
   <title>Hello Front-End</title>
 </head>
 <body>
-  <h1>Hello Front-End</h1>
+  <div class = "content">
+    <h1>Slideshow!</h1>
+    <form id = "form">
+      <p>Search for images here</p>
+      <input type="text" id="numberInput">
+      <button id="submitButton">Submit</button>
+      <button id="stop-button">Stop Slideshow</button>
+    </div>
+      <div>
+      <img id = "slideshow" src="" alt="">
+    </div>
+</form>
+  <script src="js/script.js"></script>
 </body>
 </html>
