Add images to DOM from fetch -- need to fix bug on the interval to transition images in slide very 1second --

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <title>Dog Collage</title>
   <link rel = 'stylesheet', href = 'css/style.css'>
 </head>
-<body>
+<body class="basicSetup">
+  <header>
   <h1>Dog Collage</h1>
   <div id = 'divInstructions'>
     Type in anything you want to search for
@@ -20,6 +21,7 @@
     <input type = "text", id = 'inputSearch'>
     <button type ="submit", id = 'buttonSearch'>search</button>
   </form>
+</header>
   <script src = "js/main.js"></script>
 </body>
 </html>
