--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Hello Front-End</title>
+  <link rel="stylesheet" href="css/style.css">
+  <title>Reddit Photo Slideshow</title>
 </head>
 <body>
-  <h1>Hello Front-End</h1>
+  <h1 id="pageTitle">Stuff & Things!</h1>
+  <div id="description">Search some photos of stuff or things here by typing in your search term in the provided field and clicking the button labeled "Search"!</div>
+  <input id="searchField">
+  <button id="searchButton">Search</button>
+  <script src="js/app.js"></script>
 </body>
 </html>
