Add Functionality to stop button (hide slideshow and show form again) & cleanup css formatring

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body class="basicSetup">
   <header>
-  <h1>Dog Collage</h1>
+  <h1>Collage Slideshow</h1>
   <div id = 'divInstructions'>
     Type in anything you want to search for
     <br>
