--- a/index.html
+++ b/index.html
@@ -1,11 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Hello Front-End</title>
-</head>
-<body>
-  <h1>Hello Front-End</h1>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="/css/style.css" />
+    <title>Reddit slideshow</title>
+  </head>
+
+  <body>
+    <h1 id="title">Hello Reddit Searcher</h1>
+    <h3 id="page-description">
+      Search for photos from Reddit to view a slideshow but keep it PG
+    </h3>
+
+    <div id="imgHere">
+      <img src="" id="imgTag" alt="" />
+    </div>
+
+    <form id="submitRequest">
+      <input id="searchValue" type="text" placeholder="Search..." />
+      <button id="search-button" type="button">Search</button>
+    </form>
+
+    <button id="stop-button">Stop</button>
+
+    <script src="/js/app.js"></script>
+  </body>
 </html>
