updated HTML imagelist div to img - this allows images to appear as slide show instead of piling as before!

--- a/index.html
+++ b/index.html
@@ -1,27 +1,24 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Hello Front-End</title>
-  <link rel="stylesheet" href="css/style.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Hello Front-End</title>
+<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
-  <div class="container">
-      <h1 id = 'headerone'>Welcome to the Slideshow</h1>
-      <h2 id = 'headertwo'>To begin, just enter a word and submit!</h2>
-  
+<div class="container">
+    <h1 id = 'headerone'>Welcome to the Slideshow</h1>
+    <h2 id = 'headertwo'>To begin, just enter a word and submit!</h2>
 
-    <form >
-      <input type="text" id="searchButton" placeholder = ''>
-      <input type="submit" id="'picText"></button>
-      <button type="button"  id="stopButton">New Search</button>
-      <div id= "imageList"> </div>
 
-    </form>
+  <form >
+    <input type="text" id="searchButton" placeholder = ''>
+    <input type="submit" id="'picText"></button>
+    <button type="button"  id="stopButton">New Search</button>
+    <img id= "imageList" > </img>
 
-  </div>
+  </form>
+
+</div>
 
 
 <script src="js/app.js"></script>
