--- a/index.html
+++ b/index.html
@@ -3,9 +3,30 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Hello Front-End</title>
+  <link rel="stylesheet" href="css/style.css">
+  <title>Reddit Slide Show</title>
 </head>
 <body>
-  <h1>Hello Front-End</h1>
+  <h1 class="title">Reddit Image Search</h1>
+  <h2 class="description">Type in a word to display images</h2>
+  <form class="form">
+    <div class="form-container">
+      <input class="search-input" type="search" name="" id="search">
+      <button class="search">Search</button>
+  </div>
+  </form>
+  <div class="imgWrapper">
+
+  </div>
+  
+  <div class="img-container">
+    <div class="imgInsert"></div>
+  </div>
+  <div class="btn-container">
+    <button class="stop">Stop</button>
+  </div>
+
+
+  <script src="js/app.js"></script>
 </body>
 </html>
