input form working

--- a/index.html
+++ b/index.html
@@ -8,16 +8,18 @@
   <title>Photo Slide Show</title>
 </head>
 <body>
-  <h1>CATS.</h1>
-  <div>
-    <img src="" alt="" id="imgSpace">
-  </div>
-  <div id="stopDiv"></div>
+  <h1>Reddit Photo Slide Show</h1>
+
+  <div id="imgSpace"></div>
+
+  <button id="stopButton">Stop!</button>
+
   <form id="formSubmit">
     <label for="submit" id="inputLabel">search your image...</label>
     <input type="text" id="textInput">
-    <button id="submitButton">Meow!</button>
+    <button id="submitButton">sure!</button>
   </form>
+
   <script src="js/script.js"></script>
 </body>
 </html>
