--- a/index.html
+++ b/index.html
@@ -3,9 +3,21 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Hello Front-End</title>
+  <link rel = "stylesheet" href="css/style.css">
+  <title>Reddit Slide Show</title>
 </head>
 <body>
-  <h1>Hello Front-End</h1>
+  <div id="info-container">
+    <div id="greeting-prompt">
+      <h1 id="title">Reddit Photo Slideshow!</h1>
+      <h1 id="instruction">Type something to start! NSFW is okay.</h1>
+    </div>
+   <input type="text" id="input">
+  <div id="buttons-div">
+  <button id="search">search</button>
+</div>
+  <div id="images"></div>
+  </div>
+<script src="js/app.js"></script>
 </body>
 </html>
