--- a/index.html
+++ b/index.html
@@ -1,11 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Hello Front-End</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <title>Fetch Reddit</title>
 </head>
 <body>
-  <h1>Hello Front-End</h1>
+  <div class="container1">
+
+    <h1>Reddit Image Only Search</h1>
+
+    <form id="redditResults">
+  	  <label>Search an Image:</label>
+  	  <input id="redGif" type="text" name="redGif" placeholder="Image Search">
+  	  <input id="submit" type="submit" value="Submit">
+    </form>
+
+  </div>
+  
+  <div class="container2" style="display: none;">
+    <ul id="search-results"></ul>
+    <button id="stop-button">Stop</button>
+  </div>
+
+    <script src="js/app.js"></script>
 </body>
 </html>
+
+<!-- <input id="search-value" type="text" placeholder="Search...">
+<button id="search">Search</button>
+<button id="stop">Stop</button> -->
