--- a/index.html
+++ b/index.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html lang="en"><head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Hello Front-End</title>
+  <title>Image Slideshow</title>
+  <link  rel= "stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Hello Front-End</h1>
+  <h2 id="header">Search something to see a slideshow!</h2>
+  <div id="bigDaddy">
+    <img id="imageHolder" src=""/>
+  </div>
+  <form>
+    <input type="text" id="textInput"> <br/>
+    <button class="buttonGuys" id="submitButton">Search!</button>
+    <button class="buttonGuys" id="stopButton">Pls make it stop</button>
+  </form>
+  <script src="app.js"></script> 
 </body>
 </html>
