--- a/index.html
+++ b/index.html
@@ -7,15 +7,18 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <div> 
+  <div id="header"> 
     <h1>Some Sort of Title!</h1>
     <p id="description">Search anything you want and it will come up!</p>
+    <form>
+      <input type="text" name="Enter Text Here" id="yeet">
+      <button type="submit" id="get">Search</button>
+      <button id="stawp">STOP</button>
+    </form>
   </div>
-  <div id="photo"></div>
-  <form action="" method="get">
-    <input type="text" name="Enter Text Here" id="searchField">
-    <button type="submit" id="searchButton">Search</button>
-  </form>
+  <div id="catList">
+    <img src="" id="catBox"/>
+  </div>
   <script src="js/app.js"></script>
 </body>
 </html>
