--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
   <title>Hello Front-End</title>
 </head>
 <body>
-  <h1>Cat Gallery</h1>
-  <p> press start to view the reddit gallery of cats</p>
+  <h1 id="title">Reddit Gallery</h1>
+  <p id="info"> search what you want to look at</p>
   <form>
-      <input type="text" id="textInput">
-      <button id="searchButton">Search</button>
+    <input type="text" id="textInput">
+    <button id="searchButton">Search</button>
+    <button id="stopButton">Stop</button>
   </form>
+  <img id="img" src=""/>
     <script src="js/script.js"></script>
 </body>
 </html>
