--- a/index.html
+++ b/index.html
@@ -1,11 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Hello Front-End</title>
-</head>
-<body>
-  <h1>Hello Front-End</h1>
-</body>
-</html>
+ <html lang="en">
+ <head>
+ <html lang="en"><head>
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1">
+   <title>Reddit Slideshow</title>
+   <title>Image Slideshow</title>
+   <link  rel= "stylesheet" href="style.css">
+ </head>
+ <body>
+   <h1>Welcome!</h1>
+   <h2 id="header">Search to see Slideshow</h2>
+   <div id="container">
+     <img id="imageHolder" src=""/>
+   </div>
+   <form>
+     <input type="text" id="textInput"> <br/>
+     <button class="buttons" id="searchButton">Search</button>
+     <button class="buttons" id="stopButton">Stop Slideshow</button>
+   </form>
+   <script src="app.js"></script> 
+ </body>
+ </html>
+ </html> 
