--- a/index.html
+++ b/index.html
@@ -3,9 +3,21 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="css/style.css">
   <title>Hello Front-End</title>
 </head>
 <body>
-  <h1>Hello Front-End</h1>
+  <h1>Cats of Reddit Slideshow!</h1>
+  <h2>Click the button to begin</h2>
+<form> 
+<div id= "search"> <input type="text" id="startsearch"> </div>
+  <div id= "button"><button id="startbutton">Search</button></div>
+  <button id="stopbutton">stop search</button> 
+
+
+</form>
+<img id="image" src="" /> 
+
+<script src="js/app.js"></script>
 </body>
 </html>
