--- a/index.html
+++ b/index.html
@@ -3,9 +3,24 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Hello Front-End</title>
+  <title>LOTS AND LOTS OF CATS</title>
+    <link rel="stylesheet" type="text/css" href="./css/style.css">
 </head>
 <body>
-  <h1>Hello Front-End</h1>
+  <h1>LOTS AND LOTS OF CATS</h1>
+    <div id="form-container">
+      <form id="search-form">
+        <div>
+          <label for="query">Search</label>
+          <input id="query">
+        </div>
+        <input id="go-button" type="submit" value="Lets see Cats!" class="btn">
+      </form>
+    </div>
+    <div id="slideshow-container">
+      <div id="'result"></div>
+      <input type="button" value="Stop the cuteness" id="stop-button" class="btn"> 
+    </div>
+    <script src="./js/app.js"></script>
 </body>
 </html>
