--- a/index.html
+++ b/index.html
@@ -3,16 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Hello Front End!</title>
-  <link rel="stylesheet" href="style.css">
+  <title>Cat Slideshow</title>
+  <link href="css/style.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
-<div id = "container">
-  <h1>Hello Front End</h1>
-  <h2>Hit Go to Start!</h2>
-  <input type="search" id="searchInput">
-  <button id="searchButton">Go</button>
-</div>
+<div class="container">
+  <h1>Cat Slideshow</h1>
+    <img id="image" src="">
+      <h2><label for="start">Hit Go to Start!</h2></p>
+      <button type="submit" id="go-button">Go</button>
+      <button type="submit" id="stop-button">Stop</button>
+  </div>
 <script src="js/app.js"></script>
 </body>
 </html>
+
+
