add code for fetching images and displaying them

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <body>
   <h1 id="pageTitle">Stuff & Things!</h1>
   <div id="description">Search some photos of stuff or things here by typing in your search term in the provided field and clicking the button labeled "Search"!</div>
-  <form id="searchField" type="text" type="submit">
+  <form id="form">
     <label>Search term(s):
-      <input id="search">
+      <input id="search" type="text">
+      <input type="submit">
     </label>
-    <button id="submitButton">Submit</button>
   </form>
   
   <script src="js/app.js"></script>
