--- a/index.html
+++ b/index.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Hello Front-End</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
+    <title>Image Slideshow</title>
 </head>
 <body>
-  <h1>Hello Front-End</h1>
+    <h1 id="images-slideshow">Image slideshow from Reddit</h1>
+    <h3>Enter a search category and hit the submit button to view a slideshow!</h3>
+    <img id="image" src=""/>
+    <form>
+    <input id="search" type="text">
+    <button id="submitButton">Submit</button>
+    <button id="stopButton">Stop Slideshow</button>
+    </form>
+
+    <script src="js/app.js"></script>
 </body>
 </html>
