--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Image Slideshow</title>
 </head>
-<body>
+<body id="body">
     <h1 id="images-slideshow">Image slideshow from Reddit</h1>
+    <div id="form">
     <h3>Enter a search category and hit the submit button to view a slideshow!</h3>
     <img id="image" src=""/>
     <form>
@@ -16,7 +17,7 @@
     <button id="submitButton">Submit</button>
     <button id="stopButton">Stop Slideshow</button>
     </form>
-
+    </div>
     <script src="js/app.js"></script>
 </body>
 </html>
