--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
   <h1>LOTS AND LOTS OF CATS</h1>
     <div id="form-container">
       <form>
-        <input type="text" name="Enter Search" id="text">
+        <input type="text" name="Enter Search" id="get">
         <button type="submit" id="search">Lets see Cats!</button>
         <button id="stop">Stop the cuteness</button>
       </form>
     </div>
     <div id="slideshow">
-      <img src="" id="pic">
+      <img src="" id="pic"/>
     </div>
     <script src="./js/app.js"></script>
 </body>
