--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Hello Front-End</title>
+  <title>Reddit Image Selector!</title>
 </head>
 <body>
   <h1>Hello Front-End</h1>
+  <form id="form">
+    <input id="input" type=""><input type="submit">
+  </form>
+  <div id="container"></div>
 </body>
 </html>
