Link css and js to index, and set up submit event listener to submit

--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Reddit Image Selector!</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <h1>Hello Front-End</h1>
+  <h1>Reddit Image Trawler</h1>
   <form id="form">
     <input id="input" type=""><input type="submit">
   </form>
   <div id="container"></div>
+
+  <script src="js/app.js" async defer></script>
 </body>
 </html>
