--- a/index.html
+++ b/index.html
@@ -3,9 +3,37 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="stylesheet" href="/css/style.css">
+  <script src="/js/app.js" defer></script>
   <title>Hello Front-End</title>
 </head>
+
+
 <body>
-  <h1>Hello Front-End</h1>
+  <!-- container for entire body content -->
+  <div class="container shadow">
+    <!-- On page when page loads -->
+    <div id="on-load">
+      <h2 class="text-center">Reddit Fetch Slideshow</h2>
+      <p class="col text-center">by Hayden Moyes</p>
+      <h3 class="text-center">Type in a search below, and get back images from Reddit!</h3> 
+
+      <!-- Search form #form -->
+      <form id="form" class="text-center">
+        <input id="input" type="string" value="Search Reddit">
+        <input type="submit" value="Search">
+      </form>
+      <!-- end search form -->
+    </div>
+    <!-- end 'on-load' div -->
+
+    <!-- container for Reddit fetching modules -->
+    <div class="container" id="userSearch">
+
+
+    </div>
+  </div>
+  <!-- end of entire body content container -->
 </body>
 </html>
