Get the json fetch working, but no functionality yet

--- a/index.html
+++ b/index.html
@@ -3,9 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Hello Front-End</title>
+  <link rel="stylesheet" href="css/index.css">
+  <title>reddit searcher</title>
 </head>
 <body>
-  <h1>Hello Front-End</h1>
+  <div id="search-container">
+    <h1>enter a search term</h1>
+    <form id="search-form">
+      <input type="text" id="input">
+      <input type="submit" id="submit-button">
+    </form>
+  </div>
+  <div id="search-results-container">
+
+  </div>
+  <script src="js/index.js" async defer></script>
 </body>
 </html>
