--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <h1>Reddit Image Trawler</h1>
   <form id="form">
-    <input id="input" type=""><input type="submit">
+    <input id="input" type="" value="australian shepherd"><input type="submit">
   </form>
   <div id="container"></div>
 
