Add default test picture of Zuke

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <form id="form">
     <input id="input" type="" value="australian shepherd"><input type="submit">
   </form>
-  <div id="container"></div>
+  <div id="container">Testing!</div>
 
   <script src="js/app.js" async defer></script>
 </body>
