Implement remaining functionality. Page still looks ugly though

--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
       <input type="submit" id="submit-button">
     </form>
   </div>
-  <div id="search-results-container">
 
+  <div id="search-results-container">
+    <div id="slideshow"></div>
+    <input type="button" id="stop-button" value="stop">
   </div>
   <script src="js/index.js" async defer></script>
 </body>
