--- a/index.html
+++ b/index.html
@@ -3,9 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Hello Front-End</title>
+  <title>Adventer the Reddit picuters!</title>
+  <link rel="stylesheet" href="css/style.css">
+  
 </head>
 <body>
-  <h1>Hello Front-End</h1>
+  <div id="container"></div>
+
+  <input type="text" id="input">
+  <button id="submit">Search the Reddit World! For pictures</button>
+  
+  <script src="js/index.js"></script>
 </body>
 </html>
