attach API call to search button and add minimum length to search term

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/index.css">
-  <script src="js/index.js"></script>
+  <script src="js/index.js" defer></script>
   <!-- some sort of title -->
   <title>Reddit Slideshow</title>
 </head>
@@ -18,7 +18,7 @@
     
     <!-- a blank text field -->
     <form id="form">
-      <input id="input">
+      <input id="input" minlength="1">
       <input type="submit" value="Begin">
     </form>
   </div>
