Update styling for page, change name of submit button

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
   <h1>Reddit Image Trawler</h1>
   <form id="form">
-    <input id="input" type="" value="australian shepherd"><input type="submit">
+    <input id="input" type="" value="australian shepherd"><input type="submit" value="SEARCH">
   </form>
-  <div id="container">Testing!</div>
+  <div id="container"></div>
 
   <script src="js/app.js" async defer></script>
 </body>
