Add to-dos in app.js

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <h1>Reddit Image Trawler</h1>
+  <p>Here is a short description telling the user what to do.</p>
   <form id="form">
     <input id="input" type="" value="australian shepherd"><input type="submit" value="SEARCH">
   </form>
