add functionality to show image array, go back to search window, and enter/display a new set of images

--- a/index.html
+++ b/index.html
@@ -22,9 +22,8 @@
       <input type="submit" value="Begin">
     </form>
   </div>
-  <div id="slide-container">
-    <!-- a button to stop the slideshow -->
-    <button id="stop-button">Stop Slideshow</button>
-  </div>
+  <div id="slide-container"></div>
+  <!-- a button to stop the slideshow -->
+  <button id="stop-button">Stop Slideshow</button>
 </body>
 </html>
