--- a/index.html
+++ b/index.html
@@ -3,9 +3,32 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Hello Front-End</title>
+  <link href="css/style.css" rel="stylesheet" />
+  <script src="js/app.js" defer></script>
+
+  <title>Reddit Slideshow</title>
 </head>
-<body>
-  <h1>Hello Front-End</h1>
-</body>
+
+
+
+  <body>
+    <h1 id="title">Hello Front-End</h1>
+    <h2 id="instruction">Instructions</h2>
+
+    <input id="searchbox" type="text" name="searchbox">
+
+    <button id="submitButton" type="button">submitButton</button>
+
+    <div id="slideshowContainer">slideshowContainer</div>
+<!-- 
+    <img src="https://i.imgur.com/LRoLTlK.jpeg">
+    <img src="https://i.redd.it/howbmku2mr591.jpg"> -->
+
+    <button id="stopSlideButton" type="button">stopSlideButton</button>
+
+  </body>
+
+
+
+
 </html>
