Tried Adding carousel boostrap

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
   </form>
 <div id="carousel" class="carousel slide" data-ride="carousel">
   <div class="carousel-inner">
-    <div class="item active">
+    <div class="carousel-item active">
       <img class="d-block w-100" src="()" alt="First slide">
     </div>
-    <div class="item" src="()">
+    <div class="carousel-item" src="()">
       <!-- <img class="d-block w-100" src="..." alt="Second slide"> -->
     </div>
-    <div class="item" src="()">
+    <div class="carousel-item" src="()">
       <!-- <img class="d-block w-100" src="..." alt="Third slide"> -->
     </div>
   </div>
