ASsign reddit search to an array. Need to Have array elements assigned to img src attribute of html element at an interval

--- a/index.html
+++ b/index.html
@@ -2,10 +2,22 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Hello Front-End</title>
+  <title>Reddit API</title>
+  <link rel="stylesheet" href="css/style.css">
+  <script src="script.js" defer></script>
 </head>
 <body>
-  <h1>Hello Front-End</h1>
+  <h1>Hello.</h1>
+  <div class="search"></div>
+    <input type="text" id="search" placeholder="Search Reddit Images" autocomplete="off"/>
+    <!-- <input type="number" id="searchLimit" value="5" min="0" max="20">
+    <input type="button" id="buttonOne">
+    <input type="button" id="buttonTwo">  -->
+  </div>
+
+  <div id="img">
+    <img id="scuz" src="" width="400" height="200">
+
+  </div>
 </body>
 </html>
