--- a/index.html
+++ b/index.html
@@ -4,8 +4,34 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Hello Front-End</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/styles.css">
+  <script src="js/app.js" async defer></script>
+  
 </head>
 <body>
-  <h1>Hello Front-End</h1>
+  <div class="container" id="searchPage">
+      <h1>Reddit API Image Searcher</h1>
+      <form id="form">
+        <div class="mb-3 ml-auto"></div>
+        <h6>Put in a search term</h6>
+        <input id="input">
+        <input type="submit">
+        </div>
+    </form>
+  </div>
+  <div class="container" id="resultsPage">
+    <h1>Results</h1>
+    <div class="container">
+      <div class="row justify-content-center">
+          <div class="col-4" id="frame1"></div>
+          <div class="col-4" id="frame2"></div>
+      </div>
+      <div class="text-center" id="buttonContainer">
+    </div>
+  </div>
+
+  </div>
+  </div>
 </body>
 </html>
