commit 2: working prototype, just needs CSS cleanup

--- a/index.html
+++ b/index.html
@@ -29,9 +29,14 @@
     <!-- end 'on-load' div -->
 
     <!-- container for Reddit fetching modules -->
-    <div class="container" id="userSearch">
+    <div class="container" id="reddit-fetch">
+      <div id="slideShow" style="width: 800px; margin:0 auto;">
 
-
+      </div>
+      <br>
+      <div class="col">
+        <input type="submit" value="Stop slideshow" id="stop">
+      </div>
     </div>
   </div>
   <!-- end of entire body content container -->
