--- a/index.html
+++ b/index.html
@@ -14,17 +14,19 @@
       <h1>Reddit API Image Searcher</h1>
       <form id="form">
         <div class="mb-3 ml-auto"></div>
-        <h6>Put in a search term</h6>
+        <h3>Put in a search term to view images queried from search term</h3>
+        <p>*note videos/videothumbnails removed with filter</p>
         <input id="input">
         <input type="submit">
+        <h6 class="mt-3">Searching same word multiple times will yield different results bc pagination, have fun exploring!</h6>
         </div>
     </form>
   </div>
   <div class="container" id="resultsPage">
     <h1>Results</h1>
-    <div class="container">
-      <div class="row justify-content-center">
-          <div class="col-4" id="frame1"></div>
+    <div class="container" id="mm">
+      <div class="row justify-content-center h-100 align-items: center" id="imagePlace">
+          <div class="col-4 align-items: center" id="frame1"></div>
           <div class="col-4" id="frame2"></div>
       </div>
       <div class="text-center" id="buttonContainer">
