--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
     <h1 id="title">Hello Front-End</h1>
     <h2 id="instruction">Instructions</h2>
 
-    <input id="searchbox" type="text" name="searchbox">
 
-    <button id="submitButton" type="button">submitButton</button>
+    <form id="form">
+      <input id="input" type="text">
+      <input type="submit">
+  </form>
 
     <div id="slideshowContainer">slideshowContainer</div>
-<!-- 
-    <img src="https://i.imgur.com/LRoLTlK.jpeg">
-    <img src="https://i.redd.it/howbmku2mr591.jpg"> -->
+    <img id="imgDiv1">
 
     <button id="stopSlideButton" type="button">stopSlideButton</button>
 
