--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Reddit Image Selector!</title>
+  <title>Reddit Image Trawler!</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <h1>Reddit Image Trawler</h1>
-  <p>Here is a short description telling the user what to do.</p>
+  <p>Looking for random images? Enter in your query in the box below and click "SEARCH"!</p>
   <form id="form">
     <input id="input" type="" value="australian shepherd"><input type="submit" value="SEARCH">
   </form>
