Add Stop button and add padding to search form

--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <h1>Reddit Image Trawler</h1>
-  <p>Looking for random images? Enter in your query in the box below and click "SEARCH"!</p>
-  <form id="form">
-    <input id="input" type="" value="australian shepherd"><input type="submit" value="SEARCH">
-  </form>
+  <div id="text-box">
+    <h1>Reddit Image Trawler</h1>
+    <p>Looking for random images? Enter in your query in the box below and click "SEARCH"!</p>
+    <form id="form">
+      <input id="input" type="" value="enter search term here"><input type="submit" value="SEARCH">
+    </form>
+  </div>
   <div id="container"></div>
 
   <script src="js/app.js" async defer></script>
