Fix stop button formatting from overlapping images

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <input id="input" type="" value="enter search term here"><input type="submit" value="SEARCH">
     </form>
   </div>
+  <div id="stop"></div>
   <div id="container"></div>
 
   <script src="js/app.js" async defer></script>
