--- a/index.html
+++ b/index.html
@@ -3,9 +3,36 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Hello Front-End</title>
+  <link href="index.css" rel="stylesheet" />
+  <script src='index.JS'></script>
+  <title>Fetch-Reddit-Image-Search</title>
 </head>
 <body>
-  <h1>Hello Front-End</h1>
+  <h1 id='page'>Fetch-Reddit-Image-Search</h1>
+  
+  
+  <form id='form'>
+    <input id='input' type='words'>
+    <button id='searchbutton'>Search Reddit</button>
+  </form>
+  <p id='directions'>Use the search box to look up any images you want from Reddit</p>
+  <img id='image'>
+  <div id='slideshow'></div>
+  <button id='stopSlideShow' type='button'>Stop Slideshow</button>
+
 </body>
 </html>
+
+
+  
+
+    <!-- <h2 id="instruction">Instructions</h2>
+    <form id="form">
+      <input id="input" type="text">
+      <input type="submit">
+  </form>
+    <div id="slideshowContainer">slideshowContainer</div>
+    <img id="imgDiv1">
+    <button id="stopSlideButton" type="button">stopSlideButton</button>
+  </body>
+</html> -->
