--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     </form>
   </div>
   <div id="stop"></div>
+  <img name="slide" id ="slide">
   <div id="container"></div>
 
   <script src="js/app.js" async defer></script>
