--- a/index.html
+++ b/index.html
@@ -4,27 +4,24 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="index.css" rel="stylesheet" />
-  <script src='index.JS'></script>
   <title>Fetch-Reddit-Image-Search</title>
 </head>
 <body>
   <h1 id='page'>Fetch-Reddit-Image-Search</h1>
   
-  
-  <form id='form'>
+  <form id='inputform'>
     <input id='input' type='words'>
-    <button id='searchbutton'>Search Reddit</button>
+    <input type="submit">
   </form>
   <p id='directions'>Use the search box to look up any images you want from Reddit</p>
   <img id='image'>
   <div id='slideshow'></div>
-  <button id='stopSlideShow' type='button'>Stop Slideshow</button>
-
+  
+<button id='stopSlideShow' type='button'>Stop Slideshow</button>
 </body>
+<script src='index.JS'></script>
 </html>
 
-
-  
 
     <!-- <h2 id="instruction">Instructions</h2>
     <form id="form">
