Refactor loopThroughImageArray - still not working, but getting there.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,12 @@
   </div>
   <div id="stop"></div>
   <img name="slide" id ="slide" />
-  <div id="container"></div>
+  <div id="carousel" class="carousel slide" data-ride="carousel">
+    <div class="carousel-inner">
+      <!-- THIS IS WHERE WE NEED TO CREATE THE INNER HTML OF THE IMAGES-->
+      </div>
+    </div>
+  </div>
 
   <script src="js/app.js" async defer></script>
   <!-- JavaScript Bundle with Popper -->
