--- a/index.html
+++ b/index.html
@@ -21,16 +21,18 @@
     
     <form id="form">
 
-      <input id="input-box" class="form-control"  placeholder="Search Reddit here" type="string">
+      <input id="stop-button" type="submit" value="stop slideshow">
+
+      <input id="input-box" class="form-control"  placeholder="Search any topic and get an image slideshow from Reddit" type="string">
 
       <input id="search-button" type="submit" value="search">
-    
+
+      <div id="slide-show"></div>
+
     </form>
   
   </div>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-   <!-- ^^ Above script source is to use Bootstrap's JS bundle (DELETE IF CAUSING PROBLEMS) -->
 </body>
 
 </html>
