--- a/index.html
+++ b/index.html
@@ -7,17 +7,13 @@
   <script src="script.js" defer></script>
 </head>
 <body>
-  <h1>Hello.</h1>
-  <div class="search"></div>
+  <div class="search">
+    <h1 id="greeting">Search anything for a Reddit slideshow</h1>
     <input type="text" id="search" placeholder="Search Reddit Images" autocomplete="off"/>
-    <!-- <input type="number" id="searchLimit" value="5" min="0" max="20">
-    <input type="button" id="buttonOne">
-    <input type="button" id="buttonTwo">  -->
+    <button type="button"id="stopIt">Stop Slideshow</button>
   </div>
-
   <div id="img">
-    <img id="scuz" src="" width="400" height="200">
-
+    <img id="scuz" width="500" height="500">
   </div>
 </body>
 </html>
