Images now dislpaying serially. Even multiple reddit. Sleep function junk

--- a/index.html
+++ b/index.html
@@ -24,6 +24,19 @@
     <div id="slideshowContainer">slideshowContainer</div>
     <img id="imgDiv1">
 
+
+    <img id="img1div">
+    <img id="img2div">
+    <img id="img3div">
+    <img id="img4div">
+
+
+
+
+
+
+
+
     <button id="stopSlideButton" type="button">stopSlideButton</button>
 
   </body>
