Found pictures. grabed url and made img tag andded url to it then add it to my page.

--- a/index.html
+++ b/index.html
@@ -10,8 +10,13 @@
 <body>
   <div id="container"></div>
 
-  <input type="text" id="input">
-  <button id="submit">Search the Reddit World! For pictures</button>
+  <form id="form">
+        <input id="input" ">
+        <input type="submit">
+  </form>
+
+  <!-- <input type="text" id="input"> -->
+  <!-- <button id="submit">Search the Reddit World! For pictures</button> -->
   
   <script src="js/index.js"></script>
 </body>
