Pictures load what was searched for.

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <div id="container"></div>
 
   <form id="form">
-        <input id="input" ">
-        <input type="submit">
+        <input type="text" id="input">
+        <input type="submit" id="actionButton">
   </form>
 
   <!-- <input type="text" id="input"> -->
