WORKINGls.s Needs img url cleaning but...

--- a/index.html
+++ b/index.html
@@ -21,20 +21,8 @@
       <input type="submit">
   </form>
 
-    <div id="slideshowContainer">slideshowContainer</div>
+    <div id="slideshowContainer"></div>
     <img id="imgDiv1">
-
-
-    <img id="img1div">
-    <img id="img2div">
-    <img id="img3div">
-    <img id="img4div">
-
-
-
-
-
-
 
 
     <button id="stopSlideButton" type="button">stopSlideButton</button>
