Needs to conform to requirements and URL cleaning

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 
   <body>
     <h1 id="title">Reddit Slideshow</h1>
-    <h2 id="instruction">Hi, Enter a Reddit topic in the searchbar and hit Sumbit to get back photos. Stop it with the Stop Slideshow button.</h2>
+    <h2 id="instruction">Hello!, enter a Reddit topic in the text box and hit Search. Use the Stop Slideshow button to stop it.</h2>
 
 
     <form id="form">
       <input id="input" type="text">
-      <input type="submit">
+      <input type="submit" value="Search">
   </form>
 
     <div id="slideshowContainer"></div>
