Reddit Slide Show

--- a/index.html
+++ b/index.html
@@ -3,9 +3,22 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Hello Front-End</title>
+  <title>Reddit Slide Show</title>
+  <link rel="stylesheet" href="/index.css">
+   <script src="/index.js" defer></script>
 </head>
+
 <body>
-  <h1>Hello Front-End</h1>
+  <h1>Reddit SlideShow</h1>
+  <button id="search-btn">Search all slideshow</button>
+  <form id="form">
+        <input id="input" type="text">
+        <input type="submit">
+  </form>
+     
+
+  <div class="container"></div>
+
+ 
 </body>
 </html>
