All done. Styling finished

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-
+  <link href="https://fonts.googleapis.com/css2?family=Poiret+One&family=Poppins:wght@500;600;700&family=Source+Sans+Pro&display=swap" rel="stylesheet"> 
+ 
   <link href="css/style.css" rel="stylesheet" />
 
 
@@ -12,15 +13,15 @@
 
   <body>
     <h1 id="title">Reddit Slideshow</h1>
-    <h2 id="instruction">Hello!, enter a Reddit topic in the text box and hit Search. Use the Stop Slideshow button to stop it.</h2>
+    <h2 id="instruction">Hello!, enter a Reddit topic in the text box and hit Search.</h2>
 
 
     <form id="form">
       <input id="input" type="text">
-      <input type="submit" value="Search">
+      <input type="submit" value="Search" id="searchbtn" >
   </form>
 
-    <div id="slideshowContainer"></div>
+
     <img id="imgDiv1">
 
 
