struggled with this

--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
 </head>
 <body>
  <img id="catImg">
- <button id="stopbutton">stop button</button>
-  <!-- <h3 id= 'memeBtn' onclick='fetchMemes()'>Reddit post</h3> -->
-  <button id="search-btn">"search"</button>
+ 
+ <button id="startBtn">See all pics</button>
     <form id="form">
         <input id="input" type="number" min="1" value="1">
         <input type="submit">
@@ -22,3 +21,12 @@
     <div id="container"></div>
 </body>
 </html>
+<!-- <button id="stopBtn" onclick="mainloop()">stop</button> -->
+  <!-- <h3 id= 'memeBtn' onclick='fetchMemes()'>Reddit post</h3> -->
+  <!-- <div id="start" style="display:block">
+     <a href="#" onclick="startGame()">Start Game</a>
+  </div>
+  <div id="game-over" style="display:none">
+     <h1>Game over</h1>
+     <a href="#" onclick="startGame()">Start Game</a>
+  </div> -->
