loading images and barebones layout

--- a/index.html
+++ b/index.html
@@ -3,9 +3,32 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="./css/style.css" rel="stylesheet"/>
+  <script src="./js/index.js" defer></script>
   <title>Hello Front-End</title>
 </head>
 <body>
-  <h1>Hello Front-End</h1>
+  <h1>Reddit Photo Slideshow</h1>
+  <br>
+  <div id="container">
+    <div id="photobox">
+      
+      <div id="search-and-start"> 
+
+        <div id="photo">
+          <p>Photos go here</p>
+        </div>
+        
+        <form id="form">
+          <input id="fname" type="text" value="search for pics" >
+          <input type="submit">
+        </form>
+        <button id="stop-start">Start</button>
+
+    </div>
+  </div>
+
+ 
+
 </body>
 </html>
